Add TODO note about using the ST monad.
It has been suggested in #haskell that this might be what I'm looking for to
stop using the IO monad everywhere, though I currently see how any of this
can be pure.

--- a/README
+++ b/README
@@ -34,6 +34,9 @@ TODO
     - Stop passing around void* everywhere in cxapian and pass some actual typed
       pointers
 
+    - We're are almost entirely trapped in the IO monad - should we be? Could
+      we move some stuff to the ST monad and act more pure?
+
     - cxapian needs to export delete functions, and the foreignPtr in Xapian.hs
       needs to use this deletion stuff
 
