Restructure and document
Now that this is all starting to fall into shape, we are going to need to
start getting a little more organized. I have used a directory structure
that seems to sort of resemble what I've seen from Haskell projects. I've
chosen "Search.Xapian" as our namespace for now, but I don't know if this
is correct. It can be changed later if necessary.

I've exported some stuff from Search.Xapian too, and documented it using
Haddock. While the public API is not at all set in stone yet, I do think
it will help to discuss it through the Haddock pages (better signal to
noise, imo).

--- a/README
+++ b/README
@@ -6,17 +6,15 @@ support.
 
 To get going, here's what you'll need to do:
 
-    g++ -shared cxapian.cc -o libcxapian.so -lxapian
+    g++ -shared c/cxapian.cc -o libcxapian.so -lxapian
 
 Which will generate "libcxapian" (which may need a better name). You can then
 use this with Xapian.hs:
 
-    ghci Xapian.hs -lcxapian -L.
+    ghci -isrc -lcxapian -L.
 
-And away you go! I've added `testStuff` as some really basic test code. It will
-produce test.db in your current pwd. You can poke this with:
-
-    delve -a test.db
+And away you go! There are some examples of how far we've got in the `examples`
+directory.
 
 
 
@@ -31,15 +29,7 @@ moment!)
 
 TODO
 
-    - Stop passing around void* everywhere in cxapian and pass some actual typed
-      pointers
-
     - We're are almost entirely trapped in the IO monad - should we be? Could
       we move some stuff to the ST monad and act more pure?
-
-    - cxapian needs to export delete functions, and the foreignPtr in Xapian.hs
-      needs to use this deletion stuff
-
-    - Add document probably shouldn't be calling flush
 
     - ...lots more :)
