cleaning up Types modules, adding fields support for documents (making everything more complicated >,<)

--- a/TODO
+++ b/TODO
@@ -1,9 +1,7 @@
 TODO
 ----
 
-* make use of a serializer to use any user defined document data
-* improve the query interface
-* use more ADTs
+* what is the best way to create iterators from Haskell to pass to C?
 * unsafePerformIO is bad.
 * data is stored as UTF8, which underlying text representation is appropriate?
 * support values
@@ -13,7 +11,6 @@ TODO
 
 maybe...
 * allow for custom stem algorithms in Haskell
-* remote backends?
 
 from the docs:
 * spelling correction
