transition to the new bindings

--- a/README
+++ b/README
@@ -6,7 +6,10 @@ support.
 
 To get going, here's what you'll need to do:
 
-    g++ -shared c/cxapian.cc -o libcxapian.so -lxapian
+    cd cbits
+    make
+    cd ..
+    mv cbits/libcxapian.so .
 
 Which will generate "libcxapian" (which may need a better name). You can then
 use this with Xapian.hs:
