--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 TODO
 ----
 
+* unify terms and postings
 * some objects are not being deleted such as iterators. can we reconcile this
   with lazy IO (unsafeInterleaveIO)?
 * make Cabal link the c++ object files
